--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^12.8.0",
+    "@reduxjs/toolkit": "^1.6.1",
     "react": "17.0.2",
     "react-native": "0.65.1"
   },
