--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-firebase/app": "^12.8.0",
     "@reduxjs/toolkit": "^1.6.1",
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-redux": "^7.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
