--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "singleQuote": true,
   "trailingComma": "none",
   "arrowParens": "avoid",
