--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "redux-saga": "^1.1.3",
+    "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
