--- a/package.json
+++ b/package.json
@@ -22,20 +22,23 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-redux": "7.2.5",
-    "redux-saga": "^1.1.3",
-    "typed-redux-saga": "^1.3.1"
+    "redux-saga": "1.1.3",
+    "typed-redux-saga": "1.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "2.0.0",
+    "@types/fs-extra": "9.0.13",
     "@types/jest": "26.0.23",
     "@types/react-native": "0.64.5",
     "@types/react-test-renderer": "16.9.2",
     "babel-jest": "26.6.3",
+    "babel-plugin-macros": "3.1.0",
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
+    "nunjucks": "3.2.3",
     "react-test-renderer": "17.0.2",
     "typescript": "3.8.3"
   },
