--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^12.9.3",
     "@react-native-firebase/auth": "12.9.3",
+    "@react-native-firebase/firestore": "^12.9.3",
     "@react-navigation/bottom-tabs": "6.0.7",
     "@react-navigation/native": "6.0.4",
     "@react-navigation/stack": "6.0.9",
