--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^12.9.3",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/react-native-fontawesome": "0.2.7",
+    "@react-native-firebase/app": "12.9.3",
     "@react-native-firebase/auth": "12.9.3",
-    "@react-native-firebase/firestore": "^12.9.3",
+    "@react-native-firebase/firestore": "12.9.3",
     "@react-navigation/bottom-tabs": "6.0.7",
     "@react-navigation/native": "6.0.4",
     "@react-navigation/stack": "6.0.9",
@@ -21,8 +24,10 @@
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-pager-view": "5.4.8",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
+    "react-native-svg": "12.1.1",
     "react-redux": "7.2.5",
     "redux-saga": "1.1.3"
   },
