--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.36",
@@ -47,7 +48,8 @@
     "metro-react-native-babel-preset": "0.66.2",
     "nunjucks": "3.2.3",
     "react-test-renderer": "17.0.2",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "husky": "7.0.4"
   },
   "resolutions": {
     "@types/react": "17"
