--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "babel-jest": "26.6.3",
     "babel-plugin-macros": "3.1.0",
     "eslint": "7.14.0",
+    "husky": "7.0.4",
     "jest": "26.6.3",
+    "lint-staged": "^11.2.6",
     "metro-react-native-babel-preset": "0.66.2",
     "nunjucks": "3.2.3",
+    "prettier": "2.4.1",
     "react-test-renderer": "17.0.2",
-    "typescript": "3.8.3",
-    "husky": "7.0.4"
+    "typescript": "3.8.3"
   },
   "resolutions": {
     "@types/react": "17"
@@ -63,6 +65,12 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "bash -c tsc --noEmit"
     ]
   }
 }
