--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "metro-react-native-babel-preset": "0.66.2",
     "nunjucks": "3.2.3",
     "prettier": "2.4.1",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "17.0.2",
+    "typescript": "4.4.4"
   },
   "resolutions": {
     "@types/react": "17"
