--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/firestore": "12.9.3",
     "@react-navigation/bottom-tabs": "6.0.7",
     "@react-navigation/native": "6.0.4",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "6.0.9",
     "@reduxjs/toolkit": "1.6.1",
     "@types/react-redux": "7.1.20",
