--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
     "react-redux": "7.2.5",
-    "redux-saga": "1.1.3",
-    "typed-async-storage": "^3.1.2"
+    "redux-saga": "1.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
