--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-native-fontawesome": "0.2.7",
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-firebase/app": "12.9.3",
     "@react-native-firebase/auth": "12.9.3",
     "@react-native-firebase/firestore": "12.9.3",
