--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-redux": "7.2.5",
     "redux-saga": "1.1.3"
   },
