--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/analytics": "14.2.3",
     "@react-native-firebase/app": "14.2.3",
     "@react-native-firebase/auth": "12.9.3",
+    "@react-native-firebase/dynamic-links": "14.2.3",
     "@react-native-firebase/firestore": "12.9.3",
     "@react-navigation/bottom-tabs": "6.0.7",
     "@react-navigation/native": "6.0.4",
