--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-firebase/auth": "12.9.3",
     "@react-native-firebase/firestore": "12.9.3",
     "@react-navigation/bottom-tabs": "6.0.7",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "6.0.4",
     "@react-navigation/stack": "6.0.9",
     "@reduxjs/toolkit": "1.6.1",
