--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "3.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-redux": "7.2.5",
     "redux-saga": "1.1.3"
   },
@@ -44,6 +45,7 @@
     "@types/jest": "26.0.23",
     "@types/nunjucks": "3.2.0",
     "@types/react-native": "0.64.5",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "16.9.2",
     "babel-jest": "26.6.3",
     "babel-plugin-macros": "3.1.0",
