--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-native-community/datetimepicker": "5.1.0",
     "@react-native-firebase/analytics": "14.2.3",
     "@react-native-firebase/app": "14.2.3",
-    "@react-native-firebase/auth": "12.9.3",
-    "@react-native-firebase/firestore": "12.9.3",
+    "@react-native-firebase/auth": "14.2.3",
+    "@react-native-firebase/firestore": "14.2.3",
     "@react-navigation/bottom-tabs": "6.0.7",
-    "@react-navigation/material-top-tabs": "^6.0.6",
+    "@react-navigation/material-top-tabs": "6.0.6",
     "@react-navigation/native": "6.0.4",
     "@react-navigation/stack": "6.0.9",
     "@reduxjs/toolkit": "1.6.1",
@@ -32,7 +32,7 @@
     "react-native-screens": "3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "3.1.1",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "9.0.0",
     "react-redux": "7.2.5",
     "redux-saga": "1.1.3"
   },
@@ -44,7 +44,7 @@
     "@types/jest": "26.0.23",
     "@types/nunjucks": "3.2.0",
     "@types/react-native": "0.64.5",
-    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/react-native-vector-icons": "6.4.10",
     "@types/react-test-renderer": "16.9.2",
     "babel-jest": "26.6.3",
     "babel-plugin-macros": "3.1.0",
