--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "6.0.9",
     "@reduxjs/toolkit": "1.6.1",
     "@types/react-redux": "7.1.20",
+    "lodash": "4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-gesture-handler": "1.10.3",
@@ -42,6 +43,7 @@
     "@react-native-community/eslint-config": "2.0.0",
     "@types/fs-extra": "9.0.13",
     "@types/jest": "26.0.23",
+    "@types/lodash": "^4.14.178",
     "@types/nunjucks": "3.2.0",
     "@types/react-native": "0.64.5",
     "@types/react-native-vector-icons": "6.4.10",
